--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <label for="eat">Количество еды: <input type="number" id="eat" value="100"></label>
             <br>
             <label for="popul">Количество Бактерий: <input type="number" id="popul" value="100"></label>
+            <br>
+            <label for="time">Время одного цикла (мс): <input type="number" id="time" value="100"></label>
         </div>
         <input id="start" type="submit" value="Start">
             <input id="stop" type="button" value="Stop">
