Начал работу над дектором

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
             <label for="popul">Количество Бактерий: <input type="number" id="popul" value="100"></label>
             <br>
             <label for="time">Время одного цикла (мс): <input type="number" id="time" value="100"></label>
+            <br>
+            <label for="energy">Енергия бактерий: <input type="number" id="energy" value="200"></label>
         </div>
         <input id="start" type="submit" value="Start">
             <input id="stop" type="button" value="Stop">
             <input id="clear" type="button" value="Clear">
+            <h3>Количество бактерий:<p id="countBacter"></p></h3>
+            <h3>Количество Еды:<p id="countEat"></p></h3>
         </form>
     </div>
 
