--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
     <title>Evolution</title>
     <link href="style/style.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/21e7640f1e.js" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script>
+        google.charts.load('current', {packages: ['corechart'], 'language' : 'ru'});
+        google.charts.setOnLoadCallback(drawChart);
+        function drawChart() {
+            // Define the chart to be drawn.
+            var data = google.visualization.arrayToDataTable([
+                ['Year', 'Sales', 'Expenses'],
+                [1,  1000,      400],
+                [2,  1170,      460],
+                [3,  660,       1120],
+                [4,  660,       1120],
+                [5,  660,       1120],
+                [6,  660,       1120],
+                [7,  660,       1120],
+                [8,  660,       1120],
+                [9,  660,       1120],
+                [10,  660,       1120],
+                [11,  660,       1120],
+                [12,  660,       1120],
+                [13,  660,       1120],
+                [14,  1030,      540]
+            ]);
+
+            var options = {
+                title: 'Company Performance',
+                legend: { position: 'bottom' }
+            };
+
+            // Instantiate and draw the chart.
+            var chart = new google.visualization.LineChart(document.getElementById('myPieChart'));
+            chart.draw(data, options);
+        }
+    </script>
 
 </head>
 <body>
@@ -25,6 +59,7 @@
             <h3>Количество бактерий:<p id="countBacter"></p></h3>
             <h3>Количество Еды:<p id="countEat"></p></h3>
         </form>
+        <div id="myPieChart"></div>
     </div>
 
     <div id="petri">
