--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Evolution</title>
     <link href="style/style.css" type="text/css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/21e7640f1e.js" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
 
 
@@ -33,6 +32,10 @@
     <div id="petri">
     </div>
 
-    <script src="scripts/main.js" type="text/javascript"></script>
+    
+
+    <script src="scripts/main.js" type="module"></script>
+
+
+
 </body>
-</html>
