--- a/index.html
+++ b/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Evolution</title>
-    <link href="style/style.css" type="text/css" rel="stylesheet">
+    <link href="style/style.css" type="text/css" rel="stylesheet" />
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-
-
-</head>
-<body>
+  </head>
+  <body>
     <div class="adminPanel">
-        <form id="parametr" method="post">
+      <form id="parametr" method="post">
         <div>
-            <label for="eat">Количество еды: <input type="number" id="eat" value="200"></label>
-            <br>
-            <label for="popul">Количество Бактерий: <input type="number" id="popul" value="1"></label>
-            <br>
-            <label for="time">Время одного цикла (мс): <input type="number" id="time" value="100"></label>
-            <br>
-            <label for="energy">Енергия бактерий: <input type="number" id="energy" value="200"></label>
+          <label for="eat"
+            >Количество еды: <input type="number" id="eat" value="200"
+          /></label>
+          <br />
+          <label for="popul"
+            >Количество Бактерий: <input type="number" id="popul" value="1"
+          /></label>
+          <br />
+          <label for="time"
+            >Время одного цикла (мс):
+            <input type="number" id="time" value="100"
+          /></label>
+          <br />
+          <label for="energy"
+            >Енергия бактерий: <input type="number" id="energy" value="200"
+          /></label>
         </div>
-        <input id="start" type="submit" value="Start">
-            <input id="stop" type="button" value="Stop">
-            <input id="clear" type="button" value="Clear">
-            <h3>Количество бактерий:<p id="countBacter"></p></h3>
-            <h3>Количество Еды:<p id="countEat"></p></h3>
-        </form>
-        <div id="myPieChart"></div>
+        <input id="start" type="submit" value="Start" />
+        <input id="stop" type="button" value="Stop" />
+        <input id="clear" type="button" value="Clear" />
+        <h3>
+          Количество бактерий:
+          <p id="countBacter"></p>
+        </h3>
+        <h3>
+          Количество Еды:
+          <p id="countEat"></p>
+        </h3>
+      </form>
+      <div id="myPieChart"></div>
     </div>
 
-    <div id="petri">
-    </div>
-
-    
+    <div id="petri"></div>
 
     <script src="scripts/main.js" type="module"></script>
-
-
-
-</body>
+  </body>
+</html>
