--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Evolution</title>
+    <title>Evolutions</title>
     <link href="style/style.css" type="text/css" rel="stylesheet" />
     <script src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
